[tool.poetry]
name = "honcho"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^69.1.1"

# TODO: only useful for export commands
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
honcho = "honcho.command:main"
